<resources>
    <string name="app_name">BookingLane</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="remember_me">Remember</string>
    <string name="signin">Sign in</string>
    <string name="sign_up"><u>Sign up</u></string>
    <string name="descr_example">Комфортный лимузин на 12 человек</string>
    <string name="recommended">Recommended</string>
    <string name="companies">Companies</string>
    <string name="companies_all"><u> All</u></string>
    <string name="bus">Bus</string>
    <string name="popular">Popular</string>
    <string name="all_cars">All cars</string>
    <string name="filters">Filters</string>
    <string name="search">Search</string>
    <string name="from">From :</string>
    <string name="to">To :</string>
    <string name="filter">Filter</string>
    <string name="details">Марка: HUMMER \nЦвет кузова: Белый \nВместимость: 27+1 \nЦвет салона: Светлый \nОбивка: Кожа \nГод выпуска: 2015</string>
    <string name="about_car">Взять в прокат белый Hummer Mega Bass – значит обеспечить себе яркое времяпрепровождение в компании близких людей. А их в лимузине может разместиться до 27 человек! Внутреннее убранство автомобиля придется по вкусу любителям активного и веселого отдыха: светлый кожаный салон визуально делает интерьер шире, а высокие потолки позволят без помех танцевать в полный рост.</string>
    <string name="bar">Бар и отделение для льда</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="nickname">Nickname</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="skip"><u>Skip</u></string>
    <string name="registration"><u>Registration</u></string>
    <string name="next"><u>Next</u></string>
    <string name="i_didn_t_receive_the_code"><u>I didn\'t receive the code</u></string>
    <string name="done"><u>Done</u></string>
    <string name="you_have_successfully_registered">You have successfully registered in the BOOKINGLANE application, and now you can start searching for the machine you are interested in!</string>
    <string name="thank_you_for_registering">Thank you for registering!</string>
    <string name="featured">Featured</string>
    <string name="title_activity_maps">Map</string>
    <string name="where_do_you_need_to_pick_up_from">Where do you need to pick up from?</string>
    <string name="find_a_car">Find a car</string>
    <string name="maybe_it_s_right_for_you">Maybe it’s right for you</string>
    <string name="title_activity_order_maps">Map</string>
    <string name="cancel_the_order"><u>Cancel the order</u></string>
    <string name="attention"><b>Attention!</b>\n
If you cancel your order now,
you will be fined 25%</string>
    <string name="cancel_order">Cancel order</string>
    <string name="book_a_car">Book a car</string>
    <string name="payment_method">Payment method</string>
    <string name="add_later">Add later</string>
    <string name="name">Name</string>
    <string name="sms_code">SMS code</string>
    <string name="resend"><u>Resend</u></string>
    <string name="enter_location">Enter some location</string>
    <string name="choose_car">Choose car</string>
    <string name="profile_image">Profile image</string>
    <string name="clara_bain">Clara Bain</string>
    <string name="logout"><u>Logout</u></string>
    <string name="invoices">Invoices</string>
    <string name="trip_history">Trip history</string>
    <string name="date_july_25_2013">Date: July 25, 2013</string>
    <string name="edite_user_profile">Edit user profile</string>
    <string name="point">Point</string>
    <string name="invoice">Invoice</string>
    <string name="find_car">Find car</string>
    <string name="car_details">Car Details</string>
    <string name="book_car">Book car</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="user_information">User information</string>
    <string name="change">change</string>
</resources>
