<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".activity.NamePaymentMethodActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_top_left_bg" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/ic_bottom_right_bg" />

    <RelativeLayout
        android:id="@+id/thank_you_layout_payment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/done_lottieView_payment"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_above="@id/thank_you_tv"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="successfully_done.json"
            app:lottie_loop="true" />

        <TextView
            android:id="@+id/thank_you_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="48dp"
            android:text="@string/thank_you_for_registering"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/youve_successfully_registered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/thank_you_tv"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/you_have_successfully_registered"
            android:textColor="@color/white" />

        <douglasspgyn.com.github.circularcountdown.CircularCountdown
            android:id="@+id/circularCountdown"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_below="@id/youve_successfully_registered"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            app:countdownBackgroundColor="@color/inactive_grey"
            app:countdownForegroundColor="@color/colorPrimary"
            app:countdownTextColor="@color/colorPrimaryDark"
            app:countdownTextSize="24sp" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/payment_method_name_content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">


        <ImageView
            android:id="@+id/logo_iv_payment_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            android:src="@drawable/ic_logo_text" />

        <EditText
            android:id="@+id/username_et_name_payment_method"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo_iv_payment_name"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/name"
            android:textColorHint="@color/white" />

        <ImageView
            android:id="@+id/payment_method_iv_name_payment_method"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/payment_method_tv_name_payment_method"
            android:layout_marginStart="60dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="16dp"
            android:adjustViewBounds="true"
            android:src="@drawable/payment_method" />

        <TextView

            android:id="@+id/payment_method_tv_name_payment_method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/username_et_name_payment_method"
            android:layout_centerHorizontal="true"
            android:text="@string/payment_method"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <CheckBox
            android:id="@+id/add_later_cb_name_payment_method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/payment_method_iv_name_payment_method"
            android:layout_centerHorizontal="true"
            android:text="@string/add_later"
            android:textColor="@color/white" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentBottom="true">

            <ImageView
                android:id="@+id/btn_glow_iv_registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/button_glow_bg"
                app:layout_constraintBottom_toBottomOf="parent">

            </ImageView>

            <Button
                android:id="@+id/next_btn_payment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/gradient_btn"
                android:text="@string/next"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/btn_glow_iv_registration"
                app:layout_constraintEnd_toEndOf="@id/btn_glow_iv_registration"
                app:layout_constraintStart_toStartOf="@id/btn_glow_iv_registration"
                app:layout_constraintTop_toTopOf="@id/btn_glow_iv_registration" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>

</RelativeLayout>