<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/user_information_tv_profile_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/user_information"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fullname_et_profile_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/user_information_tv_profile_edit" />

    <EditText
        android:id="@+id/phone_et_profile_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:text=""
        app:layout_constraintEnd_toStartOf="@id/change_number_btn_profile_edit"
        app:layout_constraintStart_toStartOf="@id/fullname_et_profile_edit"
        app:layout_constraintTop_toBottomOf="@id/fullname_et_profile_edit" />

    <Button
        android:id="@+id/change_number_btn_profile_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:enabled="false"
        android:text="@string/change"
        app:layout_constraintBottom_toBottomOf="@id/phone_et_profile_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/phone_et_profile_edit" />

    <TextView
        android:id="@+id/sms_code__tv_edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sms_code"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/change_number_btn_profile_edit" />

    <LinearLayout
        android:id="@+id/et_holder_edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:visibility="invisible"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sms_code__tv_edit_profile">

        <EditText
            android:id="@+id/n1_et_sms_ep"
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:imeOptions="actionGo"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/n2_et_sms_ep"
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:imeOptions="actionGo"
            android:importantForAutofill="no"

            android:inputType="numberDecimal"
            android:textColor="@color/white"

            android:textSize="17sp" />

        <EditText
            android:id="@+id/n3_et_sms_ep"
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:imeOptions="actionGo"
            android:importantForAutofill="no"

            android:inputType="numberDecimal"
            android:textColor="@color/white"

            android:textSize="17sp" />

        <EditText
            android:id="@+id/n4_et_sms_ep"
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"

            android:inputType="numberDecimal"
            android:textColor="@color/white"

            android:textSize="17sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/resend_tv_edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_holder_edit_profile"
        android:layout_alignStart="@id/et_holder_edit_profile"
        android:layout_marginTop="16dp"
        android:text="@string/resend"
        android:textColor="@color/enabled_tv_grey"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@id/et_holder_edit_profile"
        app:layout_constraintTop_toBottomOf="@id/et_holder_edit_profile" />

    <TextView
        android:id="@+id/countdown_tv_edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="1:00"
        android:textColor="@color/enabled_tv_grey"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@id/et_holder_edit_profile"
        app:layout_constraintTop_toBottomOf="@id/et_holder_edit_profile" />

    <ImageView
        android:id="@+id/btn_glow_iv_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/button_glow_bg"
        app:layout_constraintBottom_toBottomOf="parent">

    </ImageView>

    <Button
        android:id="@+id/edit_btn_profile_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/gradient_btn"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/btn_glow_iv_registration"
        app:layout_constraintEnd_toEndOf="@id/btn_glow_iv_registration"
        app:layout_constraintStart_toStartOf="@id/btn_glow_iv_registration"
        app:layout_constraintTop_toTopOf="@id/btn_glow_iv_registration" />

</androidx.constraintlayout.widget.ConstraintLayout>